# pastel

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py  tox.ini
pastel/: __init__.py  pastel.py  stack.py  style.py
tests/: conftest.py  test_api.py  test_pastel.py  test_stack.py  test_style.py
