[tool.poetry]
name = "pastel"
version = "0.1.1"
description = "Bring colors to your terminal."
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/sdispater/pastel"
repository = "https://github.com/sdispater/pastel"

packages = [
    {include = "pastel"},
    {include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6.4"
pytest-cov = "^2.7.1"
pytest-mock = "^1.10.4"
tox = "^3.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
